--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
       <h1 class="one">Hey
         <span id="name">Lydia</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">It's time >:D</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>Happy 17th, baby!!! :D</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">Happy birthday to you!! I love you 💛...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
+      <p class="idea-1">i was just gonna do that</p>
+      <p class="idea-2">but no hehe</p>
+      <p class="idea-3">i realized, i needed to do something
         <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
-        <span>:)</span>
+      <p class="idea-4">because,</p>
+      <p class="idea-5">you're special
+        <span>;)</span>
       </p>
       <p class="idea-6">
         <span>S</span>
@@ -47,7 +47,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">I'll see you soon! ;)</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,9 +117,9 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
-      <p class="last-smile">:)</p>
+      <p>okay, now come back and tell me if you liked it</p>
+      <p id="replay">or not whatever</p>
+      <p class="last-smile">;)</p>
     </div>
   </div>
 </body>
