--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Amber</span>
       </h1>
-      <p class="two" id="greetingText">It's time >:D</p>
+      <p class="two" id="greetingText">It's time >:)</p>
     </div>
     <div class="three">
-      <p>Happy 17th, baby!!! :D</p>
+      <p>Happy 17th, baby!!!</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! I love you 💛...</p>
+        <p class="hbd-chatbox">Happy birthday, baby!! I love you 💛...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -35,7 +35,7 @@
         <strong>special</strong>.</p>
       <p class="idea-4">because,</p>
       <p class="idea-5">you're special
-        <span>;)</span>
+        <span>😏</span>
       </p>
       <p class="idea-6">
         <span>S</span>
@@ -47,7 +47,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">I'll see you soon! ;)</h5>
+        <h5 id="wishText">I'll see you soon! 😘</h5>
       </div>
     </div>
     <div class="seven">
