--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">i was just gonna do that</p>
+      <p class="idea-1">i was just gonna send a message</p>
       <p class="idea-2">but no hehe</p>
       <p class="idea-3">i realized, i needed to do something
         <strong>special</strong>.</p>
       <p class="idea-4">because,</p>
       <p class="idea-5">you're special
-        <span>😏</span>
+        <span>:)</span>
       </p>
       <p class="idea-6">
         <span>S</span>
