--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <strong>special</strong>.</p>
       <p class="idea-4">because,</p>
       <p class="idea-5">you're special
-        <span>:)</span>
+        <span>;)</span>
       </p>
       <p class="idea-6">
         <span>S</span>
