--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="one">Hey
         <span id="name">Amber</span>
       </h1>
-      <p class="two" id="greetingText">It's time >:)</p>
+      <p class="two" id="greetingText">It's time >:D</p>
     </div>
     <div class="three">
       <p>Happy 17th, baby!!!</p>
@@ -46,7 +46,7 @@
       <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
+        <h3 class="wish-hbd">Happy  Birthday  BABY!</h3>
         <h5 id="wishText">I'll see you soon! 😘</h5>
       </div>
     </div>
