--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-     <audio class="song" controls loop>
+     	<div class="loading"></div>
+	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
