--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 </head>
 
 <body>
-     	<div class="loading"></div>
-	<audio class="song" controls loop>
-        <source src="hbd.mp3"></source>
-	   Your browser isn't invited for super fun audio time.
-    </audio>
+  <audio autoplay loop>
+  <audio src="hbd.mp3" autoplay>
+    <p>If you are reading this, it is because your browser does not support the audio element.</p>
+  </audio>
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
