--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <iframe width="0" height="0" src="hbd.mp3" frameborder="0" allowfullscreen></frame>
+    <audio autoplay src="hbd.mp3">
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
