--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <audio autoplay src="hbd.mp3">
+    </audio>
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
